--- a/Develop/style.css
+++ b/Develop/style.css
@@ -1,16 +1,19 @@
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-size: 16px;
   line-height: 1;
 }
 
-textarea{
+textarea {
   background: transparent;
   border: none;
   resize: none;
   color: #000000;
   border-left: 1px solid black;
+  border-top: 1px solid black;
   padding: 10px;
+  height: 80px;
+  width: 100%;
 }
 
 .jumbotron {
@@ -21,11 +24,14 @@ textarea{
   border-bottom: 10px solid black;
 }
 
-.description{
+
+.description {
   white-space: pre-wrap;
+
 }
 
-.time-block{
+
+.time-block {
   text-align: center;
   border-radius: 15px;
 }
@@ -33,14 +39,15 @@ textarea{
 .row {
   white-space: pre-wrap;
   height: 80px;
-  border-top: 1px solid white;;
+  width: 100%;
+  border-top: 1px #000000;
 }
 
 .hour {
   background-color: #ffffff;
   color: #000000;
   border-top: 1px dashed #000000;
-  padding: 20px;
+  padding: 30px;
 }
 
 .past {
@@ -62,11 +69,14 @@ textarea{
   border-left: 1px solid black;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
-  background-color: #06AED5;
+  background-color: #06aed5;
   color: white;
+  height: 80px;
+  width: 100%;
+  padding: 30px;
 }
 
 .saveBtn i:hover {
   font-size: 20px;
-  transition: all .3s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
